--- a/xdl/Info.plist
+++ b/xdl/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>应用要获取您的相机权限</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>应用要获取您的相机权限</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
